Fixed create route text not showing for directions

--- a/src/main/webapp/app/rating/rating.component.scss
+++ b/src/main/webapp/app/rating/rating.component.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: row;
   height: 900px;
-  color: #ffffff;
 }
 
 .routeMenuContainer {
@@ -12,6 +11,7 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+  color: white;
 }
 
 .form-control,
